fix(panel, block): align panel header and block header x-spacing

--- a/src/components/calcite-panel/calcite-panel.scss
+++ b/src/components/calcite-panel/calcite-panel.scss
@@ -100,7 +100,10 @@
   @apply block
     overflow-hidden
     mr-auto
-    p-4;
+    px-3
+    py-4;
+  display: flex;
+  flex-direction: column;
   .heading,
   .summary {
     @apply p-0
